add_library(modules STATIC
	module_parent.cpp include/modules/module_parent.h

	SceAVConfig/SceAVConfig.cpp SceAVConfig/SceAVConfig.h
	SceAppMgr/SceAppMgr.cpp SceAppMgr/SceAppMgr.h
	SceAppMgr/SceAppMgrUser.cpp SceAppMgr/SceAppMgrUser.h
	SceAppMgr/SceSharedFb.cpp SceAppMgr/SceSharedFb.h
	SceAppUtil/SceAppUtil.cpp SceAppUtil/SceAppUtil.h
	SceAppUtil/SceAppUtilCache.cpp SceAppUtil/SceAppUtilCache.h
	SceAppUtil/SceAppUtilExt.cpp SceAppUtil/SceAppUtilExt.h
	SceAtrac/SceAtrac.cpp SceAtrac/SceAtrac.h
	SceAudio/SceAudio.cpp SceAudio/SceAudio.h
	SceAudioIn/SceAudioIn.cpp SceAudioIn/SceAudioIn.h
	SceAudiodec/SceAudiodecUser.cpp SceAudiodec/SceAudiodecUser.h
	SceAudioenc/SceAudioencUser.cpp SceAudioenc/SceAudioencUser.h
	SceAvPlayer/SceAvPlayer.cpp SceAvPlayer/SceAvPlayer.h
	SceAvcodec/SceAvcodec.cpp SceAvcodec/SceAvcodec.h
	SceAvcodecUser/SceVideoencUser.cpp SceAvcodecUser/SceVideoencUser.h
	SceBbmc/SceBbmc.cpp SceBbmc/SceBbmc.h
	SceBt/SceBt.cpp SceBt/SceBt.h
	SceCamera/SceCamera.cpp SceCamera/SceCamera.h
	SceClipboard/SceClipboard.cpp SceClipboard/SceClipboard.h
	SceCodecEngine/SceCodecEngineUser.cpp SceCodecEngine/SceCodecEngineUser.h
	SceCodecEnginePerf/SceCodecEnginePerf.cpp SceCodecEnginePerf/SceCodecEnginePerf.h
	SceCodecEngineWrapper/SceCodecEngineWrapper.cpp SceCodecEngineWrapper/SceCodecEngineWrapper.h
	SceCommonDialog/SceCommonDialog.cpp SceCommonDialog/SceCommonDialog.h
	SceCommonDialog/SceNpWebApiCommonDialog.cpp SceCommonDialog/SceNpWebApiCommonDialog.h
	SceCompat/SceCompat.cpp SceCompat/SceCompat.h
	SceCoredump/SceCoredump.cpp SceCoredump/SceCoredump.h
	SceCoredump/SceCoredumpNounlink.cpp SceCoredump/SceCoredumpNounlink.h
	SceCtrl/SceCtrl.cpp SceCtrl/SceCtrl.h
	SceDTrace/SceDTrace.cpp SceDTrace/SceDTrace.h
	SceDbg/SceDbg.cpp SceDbg/SceDbg.h
	SceDeci4p/SceDeci4pUserp.cpp SceDeci4p/SceDeci4pUserp.h
	SceDisplay/SceDisplay.cpp SceDisplay/SceDisplay.h
	SceDisplay/SceDisplayUser.cpp SceDisplay/SceDisplayUser.h
	SceError/SceError.cpp SceError/SceError.h
	SceFace/SceFace.cpp SceFace/SceFace.h
	SceFiber/SceFiber.cpp SceFiber/SceFiber.h
	SceFios2/SceFios2.cpp SceFios2/SceFios2.h
	SceFios2/SceFios2User.cpp SceFios2/SceFios2User.h
	SceFios2Kernel/SceFios2Kernel.cpp SceFios2Kernel/SceFios2Kernel.h
	SceFios2Kernel/SceFios2Kernel02.cpp SceFios2Kernel/SceFios2Kernel02.h
	SceGameUpdate/SceGameUpdate.cpp SceGameUpdate/SceGameUpdate.h
	SceGps/SceGps.cpp SceGps/SceGps.h
	SceGpuEs4/SceGpuEs4ForUser.cpp SceGpuEs4/SceGpuEs4ForUser.h
	SceGxm/SceGxm.cpp SceGxm/SceGxm.h
	SceHandwriting/SceHandwriting.cpp SceHandwriting/SceHandwriting.h
	SceHid/SceHid.cpp SceHid/SceHid.h
	SceHttp/SceHttp.cpp SceHttp/SceHttp.h
	SceIme/SceIme.cpp SceIme/SceIme.h
	SceIofilemgr/SceIofilemgr.cpp SceIofilemgr/SceIofilemgr.h
	SceJpeg/SceJpegUser.cpp SceJpeg/SceJpegUser.h
	SceJpegEnc/SceJpegEncUser.cpp SceJpegEnc/SceJpegEncUser.h
	SceKernelDmacMgr/SceDmacmgr.cpp SceKernelDmacMgr/SceDmacmgr.h
	SceKernelModulemgr/SceBacktrace.cpp SceKernelModulemgr/SceBacktrace.h
	SceKernelModulemgr/SceModulemgr.cpp SceKernelModulemgr/SceModulemgr.h
	SceKernelThreadMgr/SceCpu.cpp SceKernelThreadMgr/SceCpu.h
	SceKernelThreadMgr/SceDebugLed.cpp SceKernelThreadMgr/SceDebugLed.h
	SceKernelThreadMgr/SceDipsw.cpp SceKernelThreadMgr/SceDipsw.h
	SceKernelThreadMgr/SceThreadmgr.cpp SceKernelThreadMgr/SceThreadmgr.h
	SceKernelThreadMgr/SceThreadmgrCoredumpTime.cpp SceKernelThreadMgr/SceThreadmgrCoredumpTime.h
	SceLibJson/SceLibJson.cpp SceLibJson/SceLibJson.h
	SceLibKernel/SceLibKernel.cpp SceLibKernel/SceLibKernel.h
	SceLibKernel/SceLibRng.cpp SceLibKernel/SceLibRng.h
	SceLibMono/SceLibMono.cpp SceLibMono/SceLibMono.h
	SceLibMonoBridge/SceLibMonoBridge.cpp SceLibMonoBridge/SceLibMonoBridge.h
	SceLibMp4Recorder/SceLibMp4Recorder.cpp SceLibMp4Recorder/SceLibMp4Recorder.h
	SceLibXml/SceLibXml.cpp SceLibXml/SceLibXml.h
	SceLibc/SceLibc.cpp SceLibc/SceLibc.h
	SceLibc/SceLibm.cpp SceLibc/SceLibm.h
	SceLibc/SceLibstdcxx.cpp SceLibc/SceLibstdcxx.h
	SceLiveArea/SceLiveAreaUtil.cpp SceLiveArea/SceLiveAreaUtil.h
	SceLocation/SceLibLocation.cpp SceLocation/SceLibLocation.h
	SceLocationExtension/SceLibLocationExtension.cpp SceLocationExtension/SceLibLocationExtension.h
	SceLsdb/SceLsdb.cpp SceLsdb/SceLsdb.h
	SceMotion/SceMotion.cpp SceMotion/SceMotion.h
	SceMotionDev/SceMotionDev.cpp SceMotionDev/SceMotionDev.h
	SceMtpIfDriver/SceMtpIf.cpp SceMtpIfDriver/SceMtpIf.h
	SceMusicExport/SceMusicExport.cpp SceMusicExport/SceMusicExport.h
	SceNearDialogUtil/SceNearDialogUtil.cpp SceNearDialogUtil/SceNearDialogUtil.h
	SceNearUtil/SceNearUtil.cpp SceNearUtil/SceNearUtil.h
	SceNet/SceNet.cpp SceNet/SceNet.h
	SceNetAdhocMatching/SceNetAdhocMatching.cpp SceNetAdhocMatching/SceNetAdhocMatching.h
	SceNetCtl/SceNetCtl.cpp SceNetCtl/SceNetCtl.h
	SceNetPs/SceNetPsForSyscalls.cpp SceNetPs/SceNetPsForSyscalls.h
	SceNgs/SceNgsInternal.cpp SceNgs/SceNgsInternal.h
	SceNgsUser/SceNgs.cpp SceNgsUser/SceNgs.h
	SceNpActivity/SceNpActivity.cpp SceNpActivity/SceNpActivity.h
	SceNpBasic/SceNpBasic.cpp SceNpBasic/SceNpBasic.h
	SceNpCommerce2/SceNpCommerce2.cpp SceNpCommerce2/SceNpCommerce2.h
	SceNpCommon/SceNpCommon.cpp SceNpCommon/SceNpCommon.h
	SceNpDrm/SceNpDrm.cpp SceNpDrm/SceNpDrm.h
	SceNpDrm/SceNpDrmPackage.cpp SceNpDrm/SceNpDrmPackage.h
	SceNpDrm/ScePsmDrm.cpp SceNpDrm/ScePsmDrm.h
	SceNpManager/SceNpManager.cpp SceNpManager/SceNpManager.h
	SceNpMatching2/SceNpMatching2.cpp SceNpMatching2/SceNpMatching2.h
	SceNpMessage/SceNpMessage.cpp SceNpMessage/SceNpMessage.h
	SceNpParty/SceNpPartyGameUtil.cpp SceNpParty/SceNpPartyGameUtil.h
	SceNpScore/SceNpScore.cpp SceNpScore/SceNpScore.h
	SceNpSignaling/SceNpSignaling.cpp SceNpSignaling/SceNpSignaling.h
	SceNpSnsFacebook/SceNpSnsFacebook.cpp SceNpSnsFacebook/SceNpSnsFacebook.h
	SceNpTrophy/SceNpTrophy.cpp SceNpTrophy/SceNpTrophy.h
	SceNpTus/SceNpTus.cpp SceNpTus/SceNpTus.h
	SceNpUtility/SceNpUtility.cpp SceNpUtility/SceNpUtility.h
	SceNpWebApi/SceNpWebApi.cpp SceNpWebApi/SceNpWebApi.h
	ScePaf/ScePafMisc.cpp ScePaf/ScePafMisc.h
	ScePaf/ScePafResource.cpp ScePaf/ScePafResource.h
	ScePaf/ScePafStdc.cpp ScePaf/ScePafStdc.h
	ScePaf/ScePafWidget.cpp ScePaf/ScePafWidget.h
	ScePamgr/ScePamgr.cpp ScePamgr/ScePamgr.h
	ScePerf/ScePerf.cpp ScePerf/ScePerf.h
	ScePgf/ScePgf.cpp ScePgf/ScePgf.h
	ScePhotoExport/ScePhotoExport.cpp ScePhotoExport/ScePhotoExport.h
	ScePower/ScePower.cpp ScePower/ScePower.h
	SceProcessmgr/SceProcessmgr.cpp SceProcessmgr/SceProcessmgr.h
	ScePromoterUtil/ScePromoterUtil.cpp ScePromoterUtil/ScePromoterUtil.h
	ScePspnetAdhoc/ScePspnetAdhoc.cpp ScePspnetAdhoc/ScePspnetAdhoc.h
	ScePvf/ScePvf.cpp ScePvf/ScePvf.h
	SceRazorCapture/SceRazorCapture.cpp SceRazorCapture/SceRazorCapture.h
	SceRazorHud/SceRazorHud.cpp SceRazorHud/SceRazorHud.h
	SceRegistryMgr/SceRegMgr.cpp SceRegistryMgr/SceRegMgr.h
	SceRegistryMgr/SceRegMgrForGame.cpp SceRegistryMgr/SceRegMgrForGame.h
	SceRegistryMgr/SceRegMgrForSDK.cpp SceRegistryMgr/SceRegMgrForSDK.h
	SceRegistryMgr/SceRegMgrService.cpp SceRegistryMgr/SceRegMgrService.h
	SceRtc/SceRtc.cpp SceRtc/SceRtc.h
	SceRtc/SceRtcUser.cpp SceRtc/SceRtcUser.h
	SceRudp/SceLibRudp.cpp SceRudp/SceLibRudp.h
	SceSas/SceSas.cpp SceSas/SceSas.h
	SceSblACMgr/SceSblACMgr.cpp SceSblACMgr/SceSblACMgr.h
	SceSblGcAuthMgr/SceSblGcAuthMgr.cpp SceSblGcAuthMgr/SceSblGcAuthMgr.h
	SceSblPostSsMgr/SceSblLicMgr.cpp SceSblPostSsMgr/SceSblLicMgr.h
	SceSblPostSsMgr/SceSblPmMgr.cpp SceSblPostSsMgr/SceSblPmMgr.h
	SceSblPostSsMgr/SceSblRtcMgr.cpp SceSblPostSsMgr/SceSblRtcMgr.h
	SceSblPostSsMgr/SceSblUtMgr.cpp SceSblPostSsMgr/SceSblUtMgr.h
	SceSblSsMgr/SceSblAimgr.cpp SceSblSsMgr/SceSblAimgr.h
	SceSblSsMgr/SceSblDmac5Mgr.cpp SceSblSsMgr/SceSblDmac5Mgr.h
	SceSblSsMgr/SceSblQafMgr.cpp SceSblSsMgr/SceSblQafMgr.h
	SceSblSsMgr/SceSblRng.cpp SceSblSsMgr/SceSblRng.h
	SceSblUpdateMgr/SceSblSsUpdateMgr.cpp SceSblUpdateMgr/SceSblSsUpdateMgr.h
	SceScreenShot/SceScreenShot.cpp SceScreenShot/SceScreenShot.h
	SceShellSvc/SceShellUtil.cpp SceShellSvc/SceShellUtil.h
	SceShutterSound/SceShutterSound.cpp SceShutterSound/SceShutterSound.h
	SceSmart/SceSmart.cpp SceSmart/SceSmart.h
	SceSqlite/SceSqlite.cpp SceSqlite/SceSqlite.h
	SceSsl/SceSsl.cpp SceSsl/SceSsl.h
	SceStdio/SceStdio.cpp SceStdio/SceStdio.h
	SceSulpha/SceSulpha.cpp SceSulpha/SceSulpha.h
	SceSysmem/SceSysmem.cpp SceSysmem/SceSysmem.h
	SceSysmodule/SceSysmodule.cpp SceSysmodule/SceSysmodule.h
	SceSystemGesture/SceSystemGesture.cpp SceSystemGesture/SceSystemGesture.h
	SceTeleportClient/SceTeleportClient.cpp SceTeleportClient/SceTeleportClient.h
	SceTeleportServer/SceTeleportServer.cpp SceTeleportServer/SceTeleportServer.h
	SceTouch/SceTouch.cpp SceTouch/SceTouch.h
	SceUdcd/SceUdcd.cpp SceUdcd/SceUdcd.h
	SceUlobjMgr/SceUlobjMgr.cpp SceUlobjMgr/SceUlobjMgr.h
	SceUlt/SceUlt.cpp SceUlt/SceUlt.h
	SceUsbPspcm/SceUsbPspcm.cpp SceUsbPspcm/SceUsbPspcm.h
	SceUsbSerial/SceUsbSerial.cpp SceUsbSerial/SceUsbSerial.h
	SceUsbServ/SceUsbServ.cpp SceUsbServ/SceUsbServ.h
	SceUsbd/SceUsbdForUser.cpp SceUsbd/SceUsbdForUser.h
	SceUsbstorVStorDriver/SceUsbstorVStor.cpp SceUsbstorVStorDriver/SceUsbstorVStor.h
	SceVideoExport/SceVideoExport.cpp SceVideoExport/SceVideoExport.h
	SceVideodec/SceVideodecUser.cpp SceVideodec/SceVideodecUser.h
	SceVoice/SceVoice.cpp SceVoice/SceVoice.h
	SceVoiceQoS/SceVoiceQoS.cpp SceVoiceQoS/SceVoiceQoS.h
	SceVshBridge/SceDrmBridge.cpp SceVshBridge/SceDrmBridge.h
	SceVshBridge/SceVshBridge.cpp SceVshBridge/SceVshBridge.h
	SceWlanBt/SceWlan.cpp SceWlanBt/SceWlan.h
)
target_include_directories(modules PUBLIC include)
target_link_libraries(modules PUBLIC module ffmpeg)
